--- a/vignettes/Get_Jacobians.Rmd
+++ b/vignettes/Get_Jacobians.Rmd
@@ -21,21 +21,22 @@ knitr::opts_chunk$set(
 library(Feedbackloops)
 ```
 
-Estimating interaction strengths from empirical data requires the following steps:
+Converting empirical data on overgrowth competition between bryozoan colonies into 
+Jacobian community matrices requires the following steps:
 
 1. Read in the raw data files (species-contact matrix and abundance table). 
 1. Convert the species-contact matrix to a tabular format that contains one row for each pair of competitors
 1. Calculation of biomass loss rates and interaction strengths using the table created in the previous step and the abundances of each species (measured in colonies per species).
-1. Assembling the Jacobian matrices by putting each interaction strength into its correct position within the Jacobian. 
+1. Assembling the Jacobian matrices by putting each interaction strength into its correct position within the matrix.
 
-## Reading in the raw data files
+## Read in raw data files
 
 For each Jacobian, two data files are needed: 
 
 1. The **species-contact-matrix** csv file contains the wins/losses/draws/total interactions for each pair of interacting species. The first row contains species names and is used to name the columns of the table. Because the species contact matrix contains a 2 x 2 block of cells for each interaction, each species name is always repeated twice (both in the rows and in the columns). 
 1. The **abundance** csv file contains a table with two columns: species name and corresponding number of colonies per species. 
 
-Use the function **read_data(path_to_species_contact_matrix, path_to_abundance_table)** to read in the raw data files (only works if they have the exact format specified above!). The function returns a list with two elements: The first is a data.frame containing the species contact matrix in the correct format to be processed further and the second is another data.frame containing the abundance table. The function removes species that appear in the abundance table but not in the species contact matrix. Also, it makes sure that species in the abundance table are ordered in the same way as in the species-contact-matrix (Important because Dave ordered his matrices according to competitive rank.)
+The function **read_data(path_to_species_contact_matrix, path_to_abundance_table)** is used to read in the raw data files (only works if they have the exact format specified above!). The function returns a list with two elements: The first is a data.frame containing the species contact matrix in the correct format to be processed further and the second is another data.frame containing the abundance table. The function removes species that appear in the abundance table but not in the species contact matrix. Also, it makes sure that species in the abundance table are ordered in the same way as in the species-contact-matrix (Important because Dave ordered his matrices according to competitive rank.)
 
 To read datasets from csv files use: 
 ```{r}
@@ -64,7 +65,7 @@ $F_{ij} = c_W W_{ij} + c_L L_{ij} + c_D D_{ij}$
 
 where $W_{ij}$, $L_{ij}$ and $D_{ij}$ represent the number of wins, losses and ties for species $i$ in confrontation with species $j$ and $c_W$, $c_L$ and $c_D$ are the so-called cost-values. Cost-values are the fixed amount of lost biomass assigned to each type of competitive outcome. In the case of intraspecific interactions (species $i$ == species $j$), draws need to be counted twice, as such an interaction affects two colonies but only one confrontation is recorded in the species-contact matrix. For each row in the interaction table, two biomass loss rates ($F_{ij}$ and $F_{ji}$) are calculated. 
 
-To convert a given biomass loss rate $F_{ij}$ into interaction strengths (as in the element $a_{ij}$ of the Jacobian matrix), it is simply divided by the abundance $B$ of species $j$: $a_{ij} = \frac{F_{ij}}{B_j}$. 
+To convert a given biomass loss rate $F_{ij}$ into interaction strengths (as in the element $a_{ij}$ of the Jacobian matrix), it is simply divided by the abundance $B$ of species $j$: $a_{ij} = \frac{F_{ij}}{B_j}$ (this follows from the formulation as Lotka-Volterra equation, see Methods in Koch \& Neutel (2023) for details). 
 
 The interaction table returned by **interaction_strengths()** contains biomass loss rates and interaction strengths for all those interactions. The cost values must be supplied in the cost list in the following order: $c_W$, $c_L$, $c_D$. 
 
@@ -73,9 +74,9 @@ interaction_table <- interaction_strengths(contact_matrix, abundance, c(-0.1, -0
 head(interaction_table)
 ```
 
-## Assembling the Jacobian matrix
+## Assemble the Jacobian matrix
 
-We already calculated all elements of the Jacobian in the previous step. The function **assemble_jacobian()** is responsible for putting them in the correct order. The species are ordered according to their position in the abundance table, so that the Jacobian will have the same order as the original species contact matrix. Note that how species are ordered does not affect the eigenvalues / stability of the network. 
+We already calculated all elements of the Jacobian in the previous step. The function **assemble_jacobian()** is responsible for putting them in the correct order. The species are ordered according to their position in the abundance table, so that the Jacobian will have the same order as the original species contact matrix. Note, that the order of species does not affect the eigenvalues / stability of the network. 
 
 **assemble_jacobian()** takes the following arguments:
 
